Update PortalInfraAuditService.java