@@ -230,7 +230,7 @@ public class PortalInfraAuditService {
         Object files = data.get("files");
         if (files instanceof List<?> list
                 && !list.isEmpty()
-                && list.get(0) instanceof Map<?, ?> f) {
+                && list.getFirst() instanceof Map<?, ?> f) {
             Object name = ((Map<String, Object>) f).get("name");
             return name != null ? String.valueOf(name) : null;
         }
